[package]
name = "supremo_loan"
version = "0.1.0"
edition = "2021"
authors = ["kimutaiRop"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0"
actix-web = "3.3"
reqwest = { version = "0.11.20", features = ["json", "blocking"] }
base64 = "0.21.4"
